# Cold-Email-Gen

./: .gitignore  chroma.py  main.py  pandasPrac.py  pyproject.toml  requirements.txt  streamlitPrac.py  webbaseloader.py
vectorstore/: chroma.sqlite3
